@@ -1,6 +1,7 @@
 // Copyright 2002-2011, University of Colorado
 package edu.colorado.phet.fluidpressureandflow.modules.watertower;
 
+import java.awt.geom.Ellipse2D;
 import java.util.ArrayList;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
@@ -12,7 +13,7 @@ import edu.colorado.phet.common.phetcommon.util.SimpleObserver;
  */
 public class WaterDrop {
     public final Property<ImmutableVector2D> position;
-    private Property<ImmutableVector2D> velocity;
+    public final Property<ImmutableVector2D> velocity;
     private final double mass = 1;
     private final double gravity = -9.8;
     private ArrayList<SimpleObserver> removalListeners = new ArrayList<SimpleObserver>();
@@ -48,5 +49,11 @@ public class WaterDrop {
     //v = 4/3 pi * r^3
     public double getRadius() {
         return Math.pow( getVolume() * 3.0 / 4.0 / Math.PI, 1.0 / 3.0 );
+    }
+
+    public boolean contains( double x, double y ) {
+        double r = getRadius();
+        final Ellipse2D.Double shape = new Ellipse2D.Double( position.getValue().getX() - r, position.getValue().getY() - r, r * 2, r * 2 );
+        return shape.contains( x, y );
     }
 }
